Blog image folder
Added week 7 images

--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -63,6 +63,9 @@
                                     save address details and payment information for a smoother checkout. With this, they are able to track their order history and current status. 
                                     This definitley tailors the experience to allow for a personalized shopping experience for the users.
                                     <!--Screenshot image-->
+                                    <figure> 
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_pro1.png" alt="Screenshot of pro">
+                                    </figure>
                                 </p>
 
                                 <p>
@@ -76,6 +79,13 @@
                                     This confuses user experience since it questions where they should click for the product, is it all the same, or are they different to each block card. 
                                     This results in a disorientated user since they face a frustrating layout.
                                     Some of the images cuts out the text above slightly, also adding to a more challenging to read user interface.
+                                    <figure> 
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con1.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con2.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con3.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con4.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con5.png" alt="Screenshot of bad UI">
+                                    </figure>
                                 </p>
 
                                 <h2 class="p-name">TicketPro</h2>
@@ -88,6 +98,10 @@
                                     Buying a ticket is relatively easy and intuitive.
                                     The Home Page/Landing page has a structured layout that allows users to see the event and a little excerpt.
                                     <!--Screenshot image-->
+                                    <figure> 
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_pro1.png" alt="Screenshot of pro">
+                                    </figure>
+
                                 </p>
 
                                 <p>
@@ -99,6 +113,11 @@
                                     and this layout does not make sense for a laptop/desktop user. 
                                     While this is combined with images sometime sitting on other components as well.
                                     <!--Screenshot images-->
+                                    <figure> 
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con1.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con2.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con3.png" alt="Screenshot of bad UI">
+                                    </figure>
                                 </p>
 
                                 
