Week 6 Design section images

--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -56,7 +56,7 @@
                         dynamic design to showcase my creativity, skills and projects. With glowing, holographic elements and smooth, 
                         immersive navigation, I want the site to invite users to explore my work - from essays and blog insights to projects. 
                         It’s not just a showcase, but an experience: a digital playground where users engage with my creations, 
-                        embodying the innovative spirit of game design and interactive media.
+                        embodying the innovative spirit of game design and interactive media. A lot of inspiration is taken from Iron Man's J.A.R.V.I.S
                     </p>
 
                     <p>
@@ -67,13 +67,80 @@
                     </p>
 
                     <p>
-                        Colour Swatches:
+                        <h2>Colour Swatches:</h2>
                         <!--Image of colour swatches-->
+                        <p>
+                            <p>
+                            Box shadow effect inside the containers: rgba(0, 255, 255, 0.3)
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_1.png" alt="font sample image">
+                            </figure>
+                            </p>
+                            <p>
+                            Hover over text and normal text: aliceblue
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_2.png" alt="font sample image">
+                            </figure>
+                            </p>
+                            <p>
+                            Container border: #00156a
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_3.png" alt="font sample image">
+                            </figure>
+                            </p>
+                            <p>
+                            Background: linear-gradient(-45deg, #00001b, #0a0049, #00156a, #000d5d);
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_4.png" alt="font sample image">
+                            </figure>
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_5.png" alt="font sample image">
+                            </figure>
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_6.png" alt="font sample image">
+                            </figure>
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_7.png" alt="font sample image">
+                            </figure>
+                            </p>
+                            <p>
+                            Navigation: box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_8.png" alt="font sample image">
+                            </figure>
+                            </p>
+                            <p>
+                            border-top: 1px solid #00f6ff;
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_9.png" alt="font sample image">
+                            </figure>
+                            </p>
+
+                        </p>
                     </p>
 
                     <p>
-                        Font Samples
-                        <!--Images-->
+                        <h2>Font Samples:</h2>
+                        <p>Inspiration for the text stems from the code-like aesthetic.</p>
+                        <p>
+                            This is the font sample for the Headings:
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_h1.png" alt="font sample image">
+                            </figure>
+                        </p>
+                        <p>
+                            Font sample for any text that need to be highlighted like logo
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_highlight.png" alt="font sample image">
+                            </figure>
+                        </p>
+                        <p>
+                            Font sample for normal paragraph text:
+                            <figure> 
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_normal.png" alt="font sample image">
+                            </figure>
+                        </p>    
+
                     </p>
 
                     <p>
@@ -100,7 +167,6 @@
                     Blog→ Essays: The blogs should kind of flow into the essays for a more deeper, 
                     analytical dive into my work.
                     Footer: A minimal footer with contact links, maybe styled like a control panel or status bar from Tony Stark's J.A.R.V.I.S system
-                    <!--Images-->
                 </p>
                 <p>
                     <!--Wireframe images-->
