--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -73,34 +73,34 @@
                             <p>
                             Box shadow effect inside the containers: rgba(0, 255, 255, 0.3)
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_1.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_1.png" alt="colour swatches">
                             </figure>
                             </p>
                             <p>
                             Hover over text and normal text: aliceblue
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_2.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_2.png" alt="colour swatches">
                             </figure>
                             </p>
                             <p>
                             Container border: #00156a
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_3.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_3.png" alt="colour swatches">
                             </figure>
                             </p>
                             <p>
                             Background: linear-gradient(-45deg, #00001b, #0a0049, #00156a, #000d5d);
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_4.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_4.png" alt="colour swatches">
                             </figure>
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_5.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_5.png" alt="colour swatches">
                             </figure>
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_6.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_6.png" alt="colour swatches">
                             </figure>
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_7.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_7.png" alt="colour swatches">
                             </figure>
                             </p>
                             <p>
@@ -145,6 +145,16 @@
 
                     <p>
                         Final design Sketches:
+                        <figure> 
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_4.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_5.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_6.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_7.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_8.png" alt="Wireframe final design sketches">
+                        </figure>
                     </p>
 
                 <h2 class="p-name">Wireframes</h2>
@@ -170,6 +180,13 @@
                 </p>
                 <p>
                     <!--Wireframe images-->
+                    <figure> 
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_4.png" alt="Wireframe final design sketches">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_5.png" alt="Wireframe final design sketches">
+                    </figure>
                 </p>
                 <a href="#" class="to-top">To the Top</a>
                 </div>
