--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -47,6 +47,31 @@
                         Initial: <br>
                         <img class="wireframe img-design img-group" src="../Images/Blogs/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
                     </p>
+                    <p>
+                        Design interaction sketches:
+                        <figure> 
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_4.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_5.png" alt="Wireframe final design sketches">
+                        </figure>
+                    </p>
+
+                    <p>
+                        Final design Sketches:
+                        <figure> 
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_4.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_5.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_6.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_7.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_8.png" alt="Wireframe final design sketches">
+                        </figure>
+                    </p>
+
                     <a href="#" class="to-top">To the Top</a>
                 </div>
             </div>
