--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
 
+    <script src="text.js"></script>
+
 </head>
     <body>
         <header>
