--- a/Blogs/blog_week_10.html
+++ b/Blogs/blog_week_10.html
@@ -53,7 +53,7 @@
                             <h2 class="p-name">Greenstein et al. - 2018 - How Geography Shapes-and Is Shaped by-the Internet</h2>
                                 
                                 <p>
-                                    In the reading, Greenstein et al.’s core argument challenges the “Death of Distance” idea 
+                                    In the reading, <cite>Greenstein et al.’s</cite> core argument challenges the <q>Death of Distance</q> idea 
                                     that the internet erases the importance of physical location, thus arguing that geography 
                                     still significantly shapes how the Internet is built, accessed, and used. I believe the key 
                                     dynamics are the infrastructure that reinforces spatial inequalities and how digital connectivity 
@@ -61,8 +61,8 @@
                                 </p>
 
                                 <p>
-                                    "What consequences did the spread of the Internet have for the geographical location of economic activity?" 
-                                    (Greenstein et al., 2018, p. 1).
+                                    <q>What consequences did the spread of the Internet have for the geographical location of economic activity?</q> 
+                                    <cite>(Greenstein et al., 2018, p. 1)</cite>.
                                 </p>
 
                                 
@@ -83,15 +83,15 @@
 
                                 <p>
                                     See, the Internet makes it easier to communicate, transport, and search, but since every place is different, 
-                                    it doesn’t help everyone equally. Greenstein et al. puts it like this: “The primary reasons why the Internet's 
+                                    it doesn’t help everyone equally. <cite>Greenstein et al.</cite> puts it like this: <q>The primary reasons why the Internet's 
                                     effect is different in different places is: local preferences, the availability of substitutes, and the 
-                                    availability of complements” (Greenstein et al., 2018, p. 2). In the sense that local preference is the likes 
+                                    availability of complements</q> <cite>(Greenstein et al., 2018, p. 2)</cite>. In the sense that local preference is the likes 
                                     and needs of that particular place, if there are other ways (besides the internet) they can already do things, 
                                     and if there are things that work together with the Internet to make it even more useful (such as schools or tech companies). 
                                 </p>
 
                                 <p>
-                                    “Death of Distance” is the core of the Greenstein et al. framework. The framework talks about how it is 
+                                    <q>Death of Distance</q> is the core of the Greenstein et al. framework. The framework talks about how it is 
                                     assumed that the Internet will make everything cheaper and easier (by the same amount), equally, 
                                     for all kinds of activities. 
                                 </p>
@@ -99,11 +99,11 @@
                                 <p>
                                     However, some things are helped by the internet more than others, which means that not everything gets 
                                     the same benefits. Some activities (like communication online) become a lot easier, while others 
-                                    (like shipping things) don't really change as much. (Greenstein et al., 2018, p. 3)
+                                    (like shipping things) don't really change as much. <cite>(Greenstein et al., 2018, p. 3)</cite>
                                 </p>
 
                                 <p>
-                                    I then read on about the “ADOPTION AND USE OF THE INTERNET”, which is about how different areas adapted 
+                                    I then read on about the <q>ADOPTION AND USE OF THE INTERNET</q>, which is about how different areas adapted 
                                     to the Internet. They mentioned that people or businesses in rural areas or small towns can get a big 
                                     benefit from using the internet, and I agree because they are more isolated from the big cities where 
                                     there are more customers and resources; and the Internet helps them connect to this. 
@@ -122,7 +122,7 @@
                                     counting domain name registrations since domain names are tied to business addresses, not to where the 
                                     internet comes from. However, this method of research isn't the best-case scenario. I agree with the 
                                     framework since some companies don’t register domain names at all, and some big companies usually register 
-                                    them in their city headquarters, even though they might have branches elsewhere. (Greenstein et al., 2018, p. 4)
+                                    them in their city headquarters, even though they might have branches elsewhere. <cite>(Greenstein et al., 2018, p. 4)</cite>
                                 </p>
 
                                 <p>
@@ -145,7 +145,7 @@
                                                 stuff online, but that still means we save face-to-face time for really important or complex things. 
                                                 (explains why places like New York are still thriving)</li>
                                         </ul>
-                                        (Greenstein et al., 2018, pp. 6-7)
+                                        <cite>(Greenstein et al., 2018, pp. 6-7)</cite>
 
                                     Innovation: 
                                         <ul>
@@ -160,7 +160,7 @@
                                             <li>Overall, the Internet helped make innovation slightly more geographically spread out, 
                                                 but only in certain regions.</li>
                                         </ul>
-                                    (Greenstein et al., 2018, pp. 7-8)
+                                    <cite>(Greenstein et al., 2018, pp. 7-8)</cite>
 
                                     Consumer behaviour:
                                     <ul>
@@ -170,7 +170,7 @@
                                             especially when it comes to what people buy. 
                                             I think this is especially true with the rise of mobile Internet use.</li>
                                     </ul>
-                                    (Greenstein et al., 2018, pp. 9-10)
+                                    <cite>(Greenstein et al., 2018, pp. 9-10)</cite>
 
                                     Globalisation and Trade:
                                     <ul>
@@ -181,7 +181,7 @@
                                         However, many forms of labour remain inherently local and non-tradable. 
                                         Therefore, I do think that the line between tradable and non-tradable work continues to shift over time.</li>
                                     </ul>
-                                    (Greenstein et al., 2018, pp. 10-11)
+                                    <cite>(Greenstein et al., 2018, pp. 10-11)</cite>
 
                                 </p>
 
@@ -199,12 +199,12 @@
                                     <ul>
                                         <li>Infrastructure Evolution and Emerging Technologies, such as 5G internet and investigating how next-gen 
                                             technologies like low-Earth orbit satellite networks (e.g., Starlink) or 5G may alter rural-urban 
-                                            divides in access. (Greenstein, 2004)</li>
+                                            divides in access. <cite>(Greenstein, 2004)</cite></li>
                                         <li>Digital labour, such as remote work and spatial inequality, and analysing how hybrid work models 
                                             redistribute economic activity, potentially reinforcing urban hubs while creating new peripheral 
-                                            "digital towns". (Osborne, 2023)</li>
+                                            "digital towns". <cite>(Osborne, 2023)</cite></li>
                                         <li>Exploring how marginalised groups reclaim geographic agency through community-owned networks, 
-                                            building on Greenstein’s work on organisational strategies. (Osborne, 2023)</li>
+                                            building on Greenstein’s work on organisational strategies. <cite>(Osborne, 2023)</cite></li>
                                     </ul>
                                 </p>
 
