Updated blogs main page
Updated the blogs main page. Added the blog card of the new blogs. Fixed their titles on the blogs main page so that it's not "Blog Week 1"

--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -42,7 +42,7 @@
             <article class="h-entry e-content">
 
             <div class="blog-card">
-            <h2 class="p-name">Week 1 Blog Post</h2>
+            <h2 class="p-name">Getting Set Up</h2>
                     <p class="p-summary">The process was relatively smooth, save for some hiccups. <br>
                     The first time I tried setting up my page and publishing it to GitHub, I then opened the link, only to find "Error 404.". 
                     Was I confused? Absolutely... <br>
@@ -51,25 +51,28 @@
             </div>
             
             <div class="blog-card">
-            <h2 class="p-name"> Week 2 Blog Post</h2>
-                    <p class="p-summary"><q>You Say You Want a Revolution? Hypertext and the Laws of Media</q> was an essay by Stuart Moulthrop originally published in 1991 and then later included in the new Media Reader in 2003. <br>
-                        Moulthrop's essay explores the concept of hypertext and it's potential to revolutionize media and culture, which is DEFINITELY relevant to the Internet today. <br>
+            <h2 class="p-name"> Internet and the www</h2>
+                    <p class="p-summary"><q>You Say You Want a Revolution? Hypertext and the Laws of Media</q> 
+                        was an essay by Stuart Moulthrop originally published in 1991 and then later included 
+                        in the new Media Reader in 2003. <br>
+                        Moulthrop's essay explores the concept of hypertext and it's potential to revolutionize 
+                        media and culture, which is DEFINITELY relevant to the Internet today. <br>
                         Read more <a href="blog_week_2.html" class="view-more">Blog Week 2</a> <br>
                     </p>
             </div>
              
             <div class="blog-card">
-            <h2 class="p-name">Week 3 Blog Post</h2>
+            <h2 class="p-name">Interaction Design for the Web</h2>
                 <p class="p-summary">
                     Working through the slides for Interaction Design <cite>(Geyser, 2023)</cite> for the web, define and discuss 
-                    your user alignment, and map out your site's content, experience, and interface elements.<br>
+                     user alignment, and map out your site's content, experience, and interface elements.<br>
                     Read more <a href="blog_week_3.html" class="view-more">Blog Week 3</a>
 
                 </p>
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Week 4 Blog Post</h2>
+            <h2 class="p-name">IxD process mashup</h2>
                 <p class="p-summary">
                     Design Process: The first iteration of my web-style guide is as follows:
                     The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
@@ -80,7 +83,7 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Week 5 Design Section Post</h2>
+            <h2 class="p-name">Design Section Post</h2>
                 <p>
                     Research for my Design Section of the website, including but not limited to the documentation of my IxD process, 
                     style process documentation, and style guide mapping
@@ -89,7 +92,7 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Week 6 Design Section Post</h2>           
+            <h2 class="p-name">Ethics of UX Practice (Design Section)</h2>           
                 <p>
                     Adding more to the Design Section of the website such as the style guide or wireframes
                     <a href="design_week_6.html" class="view-more">View More...</a>
@@ -97,11 +100,65 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Week 7 Blog Post</h2>
-                <h3></h3>
+            <h2 class="p-name">Responsive Design</h2>
                 <p class="p-summary">
                     Websites to consider for the upcoming Essay: UX & UI Analysis.<br>
                     Read more <a href="blog_week_7.html" class="view-more">Week 7</a>
+                </p>
+            </div>
+
+            <div class="blog-card">
+            <h2 class="p-name">Internet, Society and Design Justice</h2>
+                <p class="p-summary">
+                    The digital divide-highlighted by <cite>Danilou (2020)</cite> and <cite>>Kasapis (2020)</cite> reveals how structural inequalities
+                    in internet access sustain marginalization. 
+                    Claire Daniolou’s <cite>"The Need for Global Internet Connectivity”</cite> and Spyros Kasapis’ 
+                    <cite>“Internet Access is a Fundamental Right”</cite>
+                    through the lens of Design Justice...<br>
+                    Read more <a href="blog_week_9.html" class="view-more">Week 9</a>
+                </p>
+            </div>
+
+            <div class="blog-card">
+            <h2 class="p-name">The World in www</h2>
+                <p class="p-summary">
+                    In the reading, <cite>Greenstein et al.’s</cite> core argument challenges the <q>Death of Distance</q> idea 
+                    that the internet erases the importance of physical location, thus arguing that geography 
+                    still significantly shapes how the Internet is built, accessed...<br>
+                    Read more <a href="blog_week_10.html" class="view-more">Week 10</a>
+                </p>
+            </div>
+
+            <div class="blog-card">
+            <h2 class="p-name">Week 11 Digital Inequalities</h2>
+                <p class="p-summary">
+                    In Christoph Lutz's article, "Digital Inequalities in the Age of Artificial Intelligence and Big Data", 
+                    he closely looks at how unfairness in the digital world still exists to this day, especially with 
+                    new tech like AI (smart machines), big data, etc. He informs us about digital inequality in light of 
+                    new technology such as this...<br>
+                    Read more <a href="blog_week_11.html" class="view-more">Week 7</a>
+                </p>
+            </div>
+
+            <div class="blog-card">
+            <h2 class="p-name">Week 12 Digital-Coloniality</h2>
+                <h3></h3>
+                <p class="p-summary">
+                    How code matters in the context of decolonialism and just things one should be aware of in coding 
+                    practices such as programming languages that are mostly shaped by the ideas and values of the West. 
+                    This might result in an ignore of other cultures' ways of thinking, learning, and solving...<br>
+                    Read more <a href="blog_week_12.html" class="view-more">Week 7</a>
+                </p>
+            </div>
+
+            <div class="blog-card">
+            <h2 class="p-name">Week 13 Ethical Internet</h2>
+                <h3></h3>
+                <p class="p-summary">
+                    Ethical Internet. An ethical internet means using the internet in a way that is fair, respectful, 
+                    and responsible. It’s about making sure that people, companies, and governments behave in ways 
+                    that protect everyone’s rights and treat...<br>
+                    Read more <a href="blog_week_13.html" class="view-more">Week 7</a>
                 </p>
             </div>
 
