Updated Sub-Nav (Blogs)
Updated them for main blogs, main design, week1-7

--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -196,9 +196,9 @@
             <section>
                 <nav class="Sub-Nav">
                     <ul>
-                    <li><a href="designs.html">Designs</a></li>
-                    <li><a href="design_week_5.html">Week 5</a></li>
-                    <li><a class="active">Week 6</a></li>
+                    <li><a href="designs.html">Designs Main</a></li>
+                    <li><a href="design_week_5.html">Style Guide</a></li>
+                    <li><a class="active">Style Guide(pt.2)</a></li>
                     <li><a href="designs_web_style_group_project.html">Group Project</a></li>
                     <li><a href="designs_wireframe.html">Wireframes</a></li>
                     </ul>
