--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -84,8 +84,8 @@
             <nav class="Sub-Nav">
                 <ul>
                 <li><a class="active">Designs</a></li>
-                <li><a href="design_week_5.html">Week 5</a></li>
-                <li><a href="design_week_6.html">Week 6</a></li>
+                <li><a href="design_week_5.html">Style Guide</a></li>
+                <li><a href="design_week_6.html">Style Guide(pt.2)</a></li>
                 <li><a href="designs_web_style_group_project.html">Group Project</a></li>
                 <li><a href="designs_wireframe.html">Wireframes</a></li>
                 </ul>
