Updated blogs Sub-Nav
Fixed week 9-13

--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -157,8 +157,8 @@
                 <nav class="Sub-Nav">
                     <ul>
                     <li><a href="designs.html">Designs</a></li>
-                    <li><a class="active"> Designs(pt.1)</a></li>
-                    <li><a href="design_week_6.html">Designs(pt.2)</a></li>
+                    <li><a class="active">Style Guide</a></li>
+                    <li><a href="design_week_6.html">Style Guide(pt.2)</a></li>
                     <li><a href="designs_web_style_group_project.html">Group Project</a></li>
                     <li><a href="designs_wireframe.html">Wireframes</a></li>
                     </ul>
