--- a/Blogs/blog_week_10.html
+++ b/Blogs/blog_week_10.html
@@ -233,7 +233,12 @@
                         <li><a href="blog_week_4.html">Week 4</a></li>
                         <li><a href="../Designs/design_week_5.html">Week 5</a></li>
                         <li><a href="../Designs/design_week_6.html">Week 6</a></li>
-                        <li><a class="active">Week 7</a></li>
+                        <li><a href="blog_week_7.html">Week 7</a></li>
+                        <li><a href="blog_week_9.html">8</a></li> <!--We didn't have a week 8 blog post-->
+                        <li><a class="active">9</a></li>
+                        <li><a href="blog_week_11.html">12</a></li>
+                        <li><a href="blog_week_12.html">13</a></li>
+                        <li><a href="blog_week_13.html">14</a></li>
                         </ul>
                     </nav>
                 </section>
