--- a/Blogs/blog_week_12.html
+++ b/Blogs/blog_week_12.html
@@ -125,13 +125,13 @@
                     <nav class="Sub-Nav">
                         <ul>
                         <li><a href="blog.html">Blogs</a></li>
-                        <li><a href="blog_week_1.html">Week 1</a></li>
-                        <li><a href="blog_week_2.html">Week 2</a></li>
-                        <li><a href="blog_week_3.html">Week 3</a></li>
-                        <li><a href="blog_week_4.html">Week 4</a></li>
-                        <li><a href="../Designs/design_week_5.html">Week 5</a></li>
-                        <li><a href="../Designs/design_week_6.html">Week 6</a></li>
-                        <li><a href="blog_week_7.html">Week 7</a></li>
+                        <li><a href="blog_week_1.html">1</a></li>
+                        <li><a href="blog_week_2.html">2</a></li>
+                        <li><a href="blog_week_3.html">3</a></li>
+                        <li><a href="blog_week_4.html">4</a></li>
+                        <li><a href="../Designs/design_week_5.html">5</a></li>
+                        <li><a href="../Designs/design_week_6.html">6</a></li>
+                        <li><a href="blog_week_7.html">7</a></li>
                         <li><a href="blog_week_9.html">8</a></li> <!--We didn't have a week 8 blog post-->
                         <li><a href="blog_week_10.html">9</a></li>
                         <li><a href="blog_week_11.html">12</a></li>
