--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -51,7 +51,7 @@
             </div>
             
             <div class="blog-card">
-            <h2 class="p-name"> Internet and the www</h2>
+            <h2 class="p-name">Internet and the www</h2>
                     <p class="p-summary"><q>You Say You Want a Revolution? Hypertext and the Laws of Media</q> 
                         was an essay by Stuart Moulthrop originally published in 1991 and then later included 
                         in the new Media Reader in 2003. <br>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">IxD process mashup</h2>
+            <h2 class="p-name">IxD Process Mashup</h2>
                 <p class="p-summary">
                     Design Process: The first iteration of my web-style guide is as follows:
                     The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
@@ -83,7 +83,7 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Design Section Post</h2>
+            <h2 class="p-name">Style Guide Mapping</h2>
                 <p>
                     Research for my Design Section of the website, including but not limited to the documentation of my IxD process, 
                     style process documentation, and style guide mapping
@@ -130,7 +130,7 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Week 11 Digital Inequalities</h2>
+            <h2 class="p-name">Digital Inequalities</h2>
                 <p class="p-summary">
                     In Christoph Lutz's article, "Digital Inequalities in the Age of Artificial Intelligence and Big Data", 
                     he closely looks at how unfairness in the digital world still exists to this day, especially with 
@@ -141,7 +141,7 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Week 12 Digital-Coloniality</h2>
+            <h2 class="p-name">Digital-Coloniality</h2>
                 <h3></h3>
                 <p class="p-summary">
                     How code matters in the context of decolonialism and just things one should be aware of in coding 
@@ -152,7 +152,7 @@
             </div>
 
             <div class="blog-card">
-            <h2 class="p-name">Week 13 Ethical Internet</h2>
+            <h2 class="p-name">Ethical Internet</h2>
                 <h3></h3>
                 <p class="p-summary">
                     Ethical Internet. An ethical internet means using the internet in a way that is fair, respectful, 
