--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -40,7 +40,7 @@
             <div class="container"></div>
             <article class="h-entry">
                 <div class="container-wrapper">
-                <h1 class="p-name">Week 3 Blog Post</h1>
+                <h1 class="p-name">Interaction Design for the Web</h1>
                     <p>
                         by
                         <a class="p-author h-card to-top" href="../Profile/profile.html">Amina Moosa</a>
