--- a/Blogs/blog_week_10.html
+++ b/Blogs/blog_week_10.html
@@ -41,7 +41,7 @@
                 <div class="container">
                 <article class="h-entry">
                     <div class="container-wrapper">
-                    <h1 class="p-name">Week 10 Blog Post</h1>
+                    <h1 class="p-name">The World in WWW</h1>
                     <p>
                         by 
                         <a class="p-author h-card to-top" href="../Profile/profile.html">Amina Moosa</a>
