--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -40,7 +40,7 @@
             <div class="container">
             <article class="h-entry">
                 <div class="container-wrapper">
-                <h1 class="p-name">Week 4 Blog Post</h1>
+                <h1 class="p-name">IxD Process Mashup</h1>
                 <p>
                     by 
                     <a class="p-author h-card to-top" href="../Profile/profile.html">Amina Moosa</a>
