--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -41,7 +41,7 @@
                 <div class="container">
                 <article class="h-entry">
                     <div class="container-wrapper">
-                    <h1 class="p-name">Week 7 Blog Post</h1>
+                    <h1 class="p-name">Responsive Design</h1>
                     <p>
                         by 
                         <a class="p-author h-card to-top" href="../Profile/profile.html">Amina Moosa</a>
